# cqrs-demo

./: Cargo.toml  LICENSE  README.md  cqrs-demo.postman_collection.json  docker-compose.yml
curl/: WithdrawMoney.json  test_api.sh
db/: init.sql
src/: aggregate.rs  application.rs  commands.rs  config.rs  events.rs  lib.rs  main.rs  metadata_extension.rs  queries.rs  route_handler.rs  service.rs  services.rs  state.rs  timer.rs
src/domain/: aggregate.rs  commands.rs  events.rs
